--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.username=maria
 spring.datasource.password=maria
 spring.jpa.properties.hibernate.format_sql=true
+springdoc.api-docs.path=/api-docs
