--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,13 @@
             <version>1.5.2</version>
         </dependency>
 
+        <!-- hot swapping, disable cache for template, enable live reload -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 
     <build>
