--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-spring.datasource.username=maria
-spring.datasource.password=maria
+spring.datasource.username=alex
+spring.datasource.password=alex
 spring.jpa.properties.hibernate.format_sql=true
 springdoc.api-docs.path=/api-docs
