--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-spring.datasource.username=vlad
-spring.datasource.password=vlad
+spring.datasource.username=alex
+spring.datasource.password=alex
 spring.jpa.properties.hibernate.format_sql=true
 springdoc.api-docs.path=/api-docs
 jwt.secret=javainuse
